objects/dbu_Integration_Error_Log__c.object
<CustomObject>
    <fields>
        <fullName>dbu_Error_Code__c</fullName>
        <label>Error_Code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>dbu_Error_Description__c</fullName>
        <label>Error_Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>dbu_Request__c</fullName>
        <label>Request</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>dbu_Response__c</fullName>
        <label>Response</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>dbu_Service_Name__c</fullName>
        <label>Service_Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dbu_Status__c</fullName>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dbu_TimeStampInMilliSeconds__c</fullName>
        <label>dbu_Time Stamp In Milli Seconds</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>dbu Integration Error Log</label>
    <listViews>
        <fullName>CSSNA_Ecommerce</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>dbu_Service_Name__c</columns>
        <columns>dbu_Error_Code__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>CSSNA Ecommerce</label>
    </listViews>
    <listViews>
        <fullName>Part_Service</fullName>
        <columns>NAME</columns>
        <columns>dbu_Service_Name__c</columns>
        <columns>dbu_Request__c</columns>
        <columns>dbu_Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>dbu_Service_Name__c</field>
            <operation>contains</operation>
            <value>Part Service</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Part Service</label>
    </listViews>
    <nameField>
        <label>dbu Integration Error Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>dbu Integration Error Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>